<resources>
    <string name="app_name">Bataille Navale</string>
    <string name="accueil_msg">Bienvenue sur la meilleure application de bataille navale !</string>
    <string name="commencer">Commencer</string>

    <string name="jouer">Jouer</string>
    <string name="retour">Retour</string>
    <string name="rejouer">Rejouer</string>
    <string name="menu">Menu</string>
    <string name="modifier_le_volume_du_jeu_paramtres">Modifier le volume du jeu</string>
    <string name="parametres">Paramètres</string>
    <string name="historique_menu">Historique des parties</string>

    <string name="joueur1_rentrer_pseudo">Joueur 1 : veuillez rentrer votre pseudo</string>
    <string name="joueur2_rentrer_pseudo">Joueur 2 : veuillez rentrer votre pseudo</string>
    <string name="pseudo_kouyk4_form">Pseudo : kouyk4…</string>
    <string name="photo_de_profil_du_joueur_form">Photo de profil du joueur</string>
    <string name="prendre_une_photo_form">Prendre une photo</string>
    <string name="erreur_pseudo_non_rentre">Vous n\'avez pas rentré votre pseudo !</string>
    <string name="action_supprimee">Action supprimée !</string>
    <string name="action_ratee">Action ratée !</string>
    <string name="permission_accepter">Permission acceptée !</string>
    <string name="permission_refusee">Permission refusée !</string>

    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>

    <string name="pseudo_placement" formatted="false">%s : Veuillez placer vos bateaux</string>
    <string name="bat_restant_placement" formatted="false">Il reste %d bateaux à placer</string>
    <string name="taille_bat_placement" formatted="false">Placez le bateau de taille %d</string>
    <string name="choisissez_l_orientation_du_bateau_placement">Choisissez l\'orientation du bateau :</string>
    <string name="vertical_placement">Vertical</string>
    <string name="horizontal_placement">Horizontal</string>
    <string name="replacer_les_bateaux_placement">Replacer les bateaux</string>
    <string name="cliquez_sur_suivent_placement">Cliquez sur suivant</string>
    <string name="suivant_bouton">Suivant</string>
    <string name="erreur_placement_bateau">Le bateau ne peut pas être positionné à cette position</string>
    <string name="erreur_bateaux_non_places">Vous n\'avez pas placé tous les bateaux</string>
    <string name="bateaux_deja_places">Vous avez déjà placé tous les bateaux matelot, veuillez cliquez sur suivant !</string>

    <string name="nomJoueur_jeu" formatted="false">C\'est au tour de %s de jouer</string>
    <string name="bat_restant_jeu" formatted="false">Il reste %d bateaux à détruire !</string>
    <string name="case_deja_joue" formatted="false">La case en %d, %d est déjà touchée</string>
    <string name="erreur_deja_joue">Vous avez déjà joué, cliquez sur suivant</string>
    <string name="bj_partie_terminee">Bien joué ! Partie Terminée !</string>
    <string name="erreur_bateau_touche_rejouer">Vous avez touché un bateau, vous pouvez rejouer</string>
    <string name="erreur_pas_joue">Vous n\'avez pas encore joué, il faut tirer sur une case</string>
    <string name="quitter_jeu">Quitter</string>
    <string name="se_retirer_partie_jeu">Se retirer de la partie</string>
    <string name="question_abandonner__jeu">Souhaiter-vous réellement abandonner cette partie?</string>
    <string name="retraite_jeu">Retraite</string>
    <string name="revenir_se_battre_jeu">Revenir se battre</string>
    <string name="declare_forfait">Vous êtes un lâche matelos! Vous venez d\'abandonner la flotte.</string>

    <string name="pseudo_gagnant" formatted="false">Le gagnant est %s !</string>
    <string name="pseudo_plateau_gagnant" formatted="false">Plateau de %s :</string>
    <string name="imagejoueur_fin_partie">imageJoueur</string>

    <string name="voici_l_historique_de_toutes_vos_parties">Voici l\'historique de toutes vos parties</string>
    <string name="il_n_y_a_aucune_partie_enregistre">Il n\'y a aucune partie enregistrée. Jouez pour retrouvez tous vos scores !</string>
    <string name="cellule_historique" formatted="false">%s a gagné face à %s en détruisant %d de ses bateaux contre %d</string>

</resources>