<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/menu_jouer"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/jouer"
        app:backgroundTint="#0048FF" />

    <Button
        android:id="@+id/menu_historique"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:text="@string/historique_menu"
        app:backgroundTint="#0048FF" />

    <Button
        android:id="@+id/parametres_menu"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:text="Paramètres"
        app:backgroundTint="#0048FF" />

    <Button
        android:id="@+id/menu_retour"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:text="@string/retour"
        app:backgroundTint="#0048FF" />

</LinearLayout>